--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #f9f9f9;
+}
